Corrected overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -72,6 +72,7 @@
 
 body {
   font-family: 'AcuminPro', sans-serif;
+  overflow-x: hidden;
 }
 
 .menu {
